overflow of a element fixed

--- a/src/style.css
+++ b/src/style.css
@@ -89,7 +89,7 @@
         margin: 0px 10px;
     }
     .show-tags{
-        width: calc(100% - 20px);
+        width: calc(100% - 60px);
         margin: 0px 10px;
     }
     .all-links{
